Fix alignment on form section of homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ h2 {
 }
 h3 {
     text-transform: uppercase;
-    color: orange;
+    color: #ef9a5b;
     text-align: center;
 }
 
@@ -129,43 +129,66 @@ p {
 }
 
 /* Form section on each page ideas from https://www.w3schools.com/howto/howto_css_contact_form.asp */
+/* Ideas from https://www.w3schools.com/howto/howto_css_inline_form.asp */
 
-input[type=text], input[type=email], input[type=tel], select, textarea {
-    width: 80%;
-    padding: 11px;
-    color:rgb(72, 72, 72);
-    border-left: 2px solid #04AA6D;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin: 7px 0px 0px 17px;
-    resize: vertical;
+/* Display items in form horizontally */
 
-}
-
-input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 11px 18px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: Baskerville, sans-serif;
-    text-transform: uppercase;
-    width: 80%;
-}
-
-input[type=submit]:hover {
-    background-color:#FE6B00;
-}
-
-.form-section {
+#form-section {
     clear: left;
     background-size: cover;
     background-position: center;
-    height: 750px;
+    height: 50%;
+    width: 50%;
     border-radius: 6px;
     background-color: rgb(72, 72, 72);
     padding: 20px;
+}
+
+.inline-form {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.inline-form label {
+    margin: 6px 12px 6px 0;
+}
+
+.inline-form input {
+    vertical-align: middle;
+    margin: 6px 12px 6px 0;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-family: Baskerville, sans-serif;
+}
+
+.inline-form button {
+    padding: 10px 20px;
+    background-color: #FE6B00;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-family: Baskerville, sans-serif;
+    text-transform: uppercase;
+}
+
+.inline-form button:hover {
+    background-color: #04AA6D;
+}
+
+/* Adding responsiveness */
+
+@media (max-width: 800px) {
+    .inline-form input {
+        margin: 10px 0;
+    }
+
+    .inline-form {
+        flex-direction: column;
+        align-items: stretch;
+    }
 }
 
 /* footer section */
